# hiforest

./: CHANGELOG.md  LICENSE  README.md  hiforest.cabal  main.hs  opti.hs
.github/workflows/: haskell.yml
app/: Main.hs
src/: Lib.hs  Main.hs
test/: HUnitSpec.hs  QuickCheckSpec.hs  QuickcheckSpec.hs  Spec.hs
