cabal-version:      3.0
name:               hiforest
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             Felix Jobson
maintainer:         hauerf98@gmail.com
category:           Data
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    hs-source-dirs:   src
    exposed-modules:  Lib
    build-depends:
        base ^>=4.18.3.0,
        random ^>=1.3.0,
    default-language: Haskell2010

executable hiforest
    import:           warnings
    main-is:          Main.hs
    hs-source-dirs:   app
    build-depends:
        base ^>=4.18.3.0,
        random ^>=1.3.0,
        hiforest      
    default-language: Haskell2010

test-suite hiforest-tests
    import:           warnings
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Spec.hs
    build-depends:
        base,
        QuickCheck,
        hiforest
    default-language: Haskell2010

